force-app/main/default/objects/ChessBoardMove__c/ChessBoardMove__c.object-meta.xml
<CustomObject>
    <label>ChessBoardMove</label>
    <nameField>
        <displayFormat>CBM-{0}</displayFormat>
        <label>ChessBoardMove Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChessBoardMove</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>