force-app/main/default/objects/ChessBoardMove__c/fields/Castling__c.field-meta.xml
<CustomField>
    <fullName>Castling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Castling</label>
    <type>Checkbox</type>
</CustomField>