force-app/main/default/objects/ChessBoardMove__c/fields/ChessPiece__c.field-meta.xml
<CustomField>
    <fullName>ChessPiece__c</fullName>
    <label>ChessPiece</label>
    <referenceTo>ChessPiece__c</referenceTo>
    <relationshipLabel>ChessBoardMove</relationshipLabel>
    <relationshipName>ChessBoardMove</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>