force-app/main/default/objects/ChessBoardMove__c/fields/En_Passant__c.field-meta.xml
<CustomField>
    <fullName>En_Passant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Passant</label>
    <type>Checkbox</type>
</CustomField>