force-app/main/default/objects/ChessBoardMove__c/fields/Target_Piece__c.field-meta.xml
<CustomField>
    <fullName>Target_Piece__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Piece</label>
    <referenceTo>ChessPiece__c</referenceTo>
    <relationshipLabel>ChessBoardMove (Castling Rook)</relationshipLabel>
    <relationshipName>ChessBoardMove1</relationshipName>
    <type>Lookup</type>
</CustomField>