force-app/main/default/objects/ChessBoardMove__c/fields/X_Destination__c.field-meta.xml
<CustomField>
    <fullName>X_Destination__c</fullName>
    <label>X-Destination</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>