force-app/main/default/objects/ChessBoardMove__c/fields/X_Direction__c.field-meta.xml
<CustomField>
    <fullName>X_Direction__c</fullName>
    <formula>X_Destination__c - X_Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X Direction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>