force-app/main/default/objects/ChessBoardMove__c/fields/X_Origin__c.field-meta.xml
<CustomField>
    <fullName>X_Origin__c</fullName>
    <label>X-Origin</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>