force-app/main/default/objects/ChessBoardMove__c/fields/Y_Destination__c.field-meta.xml
<CustomField>
    <fullName>Y_Destination__c</fullName>
    <label>Y-Destination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>