force-app/main/default/objects/ChessBoardMove__c/fields/Y_Direction__c.field-meta.xml
<CustomField>
    <fullName>Y_Direction__c</fullName>
    <formula>Y_Destination__c - Y_Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y Direction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>