force-app/main/default/objects/ChessBoardMove__c/fields/Y_Origin__c.field-meta.xml
<CustomField>
    <fullName>Y_Origin__c</fullName>
    <label>Y-Origin</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>