force-app/main/default/objects/ChessBoardMove__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Castling__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>